--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -73,13 +73,13 @@
             <ImageView
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="160dp"
+                android:layout_height="@dimen/cards_preview_height"
                 android:src="@drawable/card"
                 android:padding="@dimen/above_below_padding"/>
             <ImageView
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="160dp"
+                android:layout_height="@dimen/cards_preview_height"
                 android:src="@drawable/card"
                 android:padding="@dimen/above_below_padding"/>
 
