--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -6,7 +6,8 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.example.akshaypall.itgsapp.CardsActivity">
+                tools:context="com.example.akshaypall.itgsapp.CardsActivity"
+                >
 
 
     <LinearLayout
