--- a/app/src/main/res/layout/activity_info_card.xml
+++ b/app/src/main/res/layout/activity_info_card.xml
@@ -1,15 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.akshaypall.itgsapp.InfoCard">
 
-    <ImageView
+    <TextView
+            android:id="@+id/card_text"
+            android:text="@string/lorem_ipsum"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textIsSelectable="true"
+            android:padding="@dimen/card_text_padding"
+            android:layout_gravity = "center"
+            android:background="@android:color/holo_red_dark"
+            android:layout_width = "match_parent"
+            android:layout_height = "250dp"
+            />
+
+    <!-- <ImageView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_gravity="center"
-        android:src="@drawable/card"/>
-
+        android:src="@drawable/card"/> -->
 </LinearLayout>
