--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -1,114 +1,13 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.example.akshaypall.itgsapp.CardsActivity"
-                >
+<GridView
+        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
+        android:id="@+id/cards_grid"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:numColumns="auto_fit"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
+        android:clickable="false"
+        android:focusable="false">
 
+</GridView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="160dp"
-                        android:src="@drawable/card"
-                        android:padding="@dimen/above_below_padding"
-                        android:id="@+id/card"/>
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="160dp"
-                        android:src="@drawable/card"
-                        android:padding="@dimen/above_below_padding"/>
-
-                </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="160dp"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="160dp"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="160dp"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="160dp"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="@dimen/cards_preview_height"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="@dimen/cards_preview_height"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="160dp"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="160dp"
-                android:src="@drawable/card"
-                android:padding="@dimen/above_below_padding"/>
-
-        </LinearLayout>
-
-
-
-
-    </LinearLayout>
-
-</ScrollView>
