--- a/app/src/main/res/menu/menu_cards.xml
+++ b/app/src/main/res/menu/menu_cards.xml
@@ -2,7 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.example.akshaypall.itgsapp.CardsActivity">
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/add_button"
           android:title="@string/filter"
           android:orderInCategory="100"
           app:showAsAction="always"/>
