--- a/app/src/main/res/menu/menu_info_card.xml
+++ b/app/src/main/res/menu/menu_info_card.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.akshaypall.itgsapp.InfoCard">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context="com.example.akshaypall.itgsapp.InfoCard">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/flip"
-        app:showAsAction="always" />
+            android:id="@+id/add_button"
+            android:orderInCategory="100"
+            android:title="@string/flip"
+            app:showAsAction="always"/>
 </menu>
