--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -4,8 +4,10 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:numColumns="auto_fit"
+        android:columnWidth="160dp"
         android:horizontalSpacing="10dp"
         android:verticalSpacing="10dp"
+        android:stretchMode="columnWidth"
         android:clickable="false"
         android:focusable="false">
 
