Queried Data *GRID BROKEN*
Queried the cards for the "all" section. An intent would pass the text
of each card to the actual card info screen however the buttons are NOT
currently showing.

--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,6 +5,7 @@
         android:focusable="true"
         android:layout_width="160dp"
         android:layout_height="80dp"
+    android:background="#FF0000"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         >
 </Button>
