--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,368 +1,13 @@
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/above_below_padding"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RelativeLayout
+    <ListView
+            android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding"
-            android:id="@+id/test">
+            android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/all_unit_text"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/main_divider_text_below_margin"
-            android:layout_marginLeft="@dimen/main_divider_text_left_margin"
-            android:layout_marginTop="@dimen/main_divider_text_top_margin"
-            android:text="@string/units_title_text"/>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/unit_internet"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/unit_internet"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/unit_internet"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/main_divider_text_below_margin"
-            android:layout_marginLeft="@dimen/main_divider_text_left_margin"
-            android:layout_marginTop="@dimen/main_divider_text_top_margin"
-            android:text="@string/colour_title_text"/>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="@dimen/main_elevation_of_lines"
-            android:paddingBottom="@dimen/above_below_padding"
-            android:paddingLeft="@dimen/left_right_padding"
-            android:paddingRight="@dimen/left_right_padding"
-            android:paddingTop="@dimen/above_below_padding">
-
-            <ImageView
-                android:layout_width="@dimen/circle_color_radius"
-                android:layout_height="@dimen/circle_color_radius"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/circle_color_padding"
-                android:src="@drawable/circle"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/circle_to_unit_margin"
-                android:text="@string/colour_red"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        </RelativeLayout>
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
