--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="vertical_inner_margin">40dp</dimen>
 
     <dimen name="circle_to_unit_margin">41dp</dimen>
     <dimen name="left_right_padding">16dp</dimen>
@@ -19,4 +20,8 @@
     <dimen name="main_elevation_of_lines">5dp</dimen>
 
     <dimen name="card_text_padding">5dp</dimen>
+    <dimen name="dot_size">20dp</dimen>
+    <dimen name="dot_padding">4dp</dimen>
+    <dimen name="row_height">72dp</dimen>
+
 </resources>
