--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -3,6 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/row_height"
                 android:paddingLeft="@dimen/activity_vertical_margin"
+                android:background="@color/white"
                 android:paddingRight="@dimen/activity_vertical_margin">
     <ImageView
             android:id="@+id/dot"
