--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,46 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_width="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/row_height"
+        android:paddingTop="@dimen/static_title_row_padding"
+        android:paddingBottom="@dimen/static_title_row_padding"
+        android:paddingLeft="@dimen/activity_vertical_margin"
+        android:background="#FFFFFF"
+        android:text="All"
+        android:id="@+id/all_title_row"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/headingOne"
+        android:layout_marginTop="@dimen/category_divider_top_margin"
+        android:layout_marginBottom="@dimen/category_divider_bottom_margin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"/>
     <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
+        android:id="@+id/list"
+        android:layout_weight="50"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/headingSEI"
+        android:layout_marginTop="@dimen/category_divider_top_margin"
+        android:layout_marginBottom="@dimen/category_divider_bottom_margin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"/>
+    <ListView
+        android:id="@+id/sei_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="50"/>
 </LinearLayout>
