--- a/app/src/main/res/layout/activity_info_card.xml
+++ b/app/src/main/res/layout/activity_info_card.xml
@@ -2,21 +2,23 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingBottom="8dp"
+              android:paddingLeft="8dp"
+              android:paddingRight="8dp"
+              android:paddingTop="8dp"
               tools:context="com.example.akshaypall.itgsapp.InfoCard">
 
     <TextView
             android:id="@+id/card_text"
             android:text="@string/lorem_ipsum"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textIsSelectable="true"
             android:padding="@dimen/card_text_padding"
+            android:gravity="center_vertical"
             android:layout_gravity="center"
-            android:background="@android:color/holo_red_dark"
+            android:background="@drawable/rounded_corner"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="match_parent"
+
             />
 </LinearLayout>
