--- a/app/src/main/res/layout/sei_list_row.xml
+++ b/app/src/main/res/layout/sei_list_row.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/row_height"
         android:background="#FFFFFF">
+
         <TextView
+            android:id="@+id/sei_list_row_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:paddingLeft="@dimen/activity_vertical_margin"
             android:text="@string/placeholder"
-            android:id="@+id/sei_list_row_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
     </RelativeLayout>
 
