ActionBar colour matches card colour & some code formatting

--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -1,9 +1,10 @@
 <ListView
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:id="@+id/cards_list"
-        android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false">
+    android:id="@+id/cards_list"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="false"
+    android:focusable="false">
 
 </ListView>
 
