--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,46 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:layout_width="match_parent">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/all_title_row"
         android:layout_width="match_parent"
         android:layout_height="@dimen/row_height"
-        android:paddingTop="@dimen/static_title_row_padding"
+        android:background="#FFFFFF"
         android:paddingBottom="@dimen/static_title_row_padding"
         android:paddingLeft="@dimen/activity_vertical_margin"
-        android:background="#FFFFFF"
+        android:paddingTop="@dimen/static_title_row_padding"
         android:text="All"
-        android:id="@+id/all_title_row"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/headingOne"
-        android:layout_marginTop="@dimen/category_divider_top_margin"
         android:layout_marginBottom="@dimen/category_divider_bottom_margin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"/>
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/category_divider_top_margin"
+        android:text="@string/headingOne"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+
     <ListView
         android:id="@+id/list"
-        android:layout_weight="50"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="50"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/headingSEI"
-        android:layout_marginTop="@dimen/category_divider_top_margin"
         android:layout_marginBottom="@dimen/category_divider_bottom_margin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"/>
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/category_divider_top_margin"
+        android:text="@string/headingSEI"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+
     <ListView
         android:id="@+id/sei_list"
         android:layout_width="match_parent"
